--- a/kildeanalyse.css
+++ b/kildeanalyse.css
@@ -2,20 +2,36 @@
 		Forneden er der nogle justeringer der får boilerplaten til at ligne MAMs design.
 ******************************************************************************************************/
 
-h1 {
-	margin: 40px 0px; 
-	line-height: 1em;
-}
-h2 {
-	margin: 30px 0px 20px 0px; 
-	line-height: 1em;
-}
-h4 {
-	margin: 0px; 
-	line-height: 1em;
-}
 
 
+.kilde_container{
+	overflow: auto;
+    border: 1px solid #aaa;
+    border-radius: 14px;
+    padding: 20px;
+    height: 100%;
+    box-shadow: 1px 2px 10px #888888;
+    background-color: #fff;
+    margin-top:20px;
+}
 
 .spm_container{
+	padding:5px;
+}
+
+.analysetext{
+	color: black;
+    line-height: 1.3;
+    
+}
+
+.analyse_container{
+	background-color: #fff;
+
+    margin-top: 30px;
+    padding: 5px 0px 0px 5px;
+}
+
+.checkAnswer{
+	margin-top: 15px;
 }
