--- a/kildeanalyse.css
+++ b/kildeanalyse.css
@@ -3,13 +3,17 @@
 ******************************************************************************************************/
 
 
+.kilde_wrapping{
+color:#999;
+font-size: 12px;
+}
 
 .kilde_container{
 	overflow: auto;
     border: 1px solid #aaa;
     border-radius: 14px;
     padding: 20px;
-    height: 100%;
+    height: 550px;
     box-shadow: 1px 2px 10px #888888;
     background-color: #fff;
     margin-top:20px;
@@ -22,16 +26,29 @@
 .analysetext{
 	color: black;
     line-height: 1.3;
-    
+    font-size: 14px;
+    padding: 1px 20px 12px 0px;    
 }
 
 .analyse_container{
-	background-color: #fff;
-
+    background-color: #fff;
     margin-top: 30px;
-    padding: 5px 0px 0px 5px;
+    padding: 1px 0px 0px 15px;
+    width: 90%;
+    height: 410px;
 }
 
 .checkAnswer{
 	margin-top: 15px;
+}
+
+.pic{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.dropdown{
+        width: 90%;
+    background-color: white;
+    color: black;
 }
