--- a/kildeanalyse.css
+++ b/kildeanalyse.css
@@ -31,6 +31,11 @@ font-size: 12px;
     padding: 1px 20px 12px 0px;    
 }
 
+.kilde_henvisning{
+    background-color: white;
+    
+    }
+
 .analyse_container{
     background-color: #fff;
     margin-top: 30px;
