--- a/kildeanalyse.css
+++ b/kildeanalyse.css
@@ -1,64 +1,64 @@
 /******************************************************************************************************
-		Forneden er der nogle justeringer der får boilerplaten til at ligne MAMs design.
+        Forneden er der nogle justeringer der får boilerplaten til at ligne MAMs design.
 ******************************************************************************************************/
 
-
-.kilde_wrapping{
-color:#999;
-font-size: 12px;
+.kilde_wrapping {
+    color: #999;
+    font-size: 12px;
 }
 
-.kilde_container{
-	overflow: auto;
+.kilde_container {
+    overflow: auto;
     border-radius: 8px;
     padding: 20px;
-    height: 550px;
+    max-height: 550px;
+    min-height: 550px;
+    
     box-shadow: 1px 2px 10px #888888;
     background-color: #fff;
-    margin-top:20px;
+    margin-top: 20px;
+
 }
 
-
-
-.spm_container{
-	padding:5px;
+.spm_container {
+    padding: 5px;
 }
 
-.analysetext{
-	color: black;
+.analysetext {
+    color: black;
     line-height: 1.3;
     font-size: 14px;
-    padding: 1px 20px 12px 0px;    
+    padding: 1px 20px 12px 0px;
 }
 
-.kilde_henvisning{
-    background-color: white;
-    
-    }
 
-.analyse_container{
+
+.analyse_container {
     background-color: #fff;
-    margin-top: 30px;
     padding: 1px 0px 0px 15px;
     width: 90%;
-    }
-
-
-.checkAnswer{
-	margin-top: 15px;
 }
 
-.pic{
+.checkAnswer {
+    margin-top: 15px;
+}
+
+.pic {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-.dropdown{
-        width: 90%;
+
+.dropdown {
+    width: 90%;
     background-color: white;
     color: black;
 }
 
-.pic{
+.pic {
     cursor: pointer;
+}
+
+.score {
+    display: inline-block;
 }
