--- a/kildeanalyse.css
+++ b/kildeanalyse.css
@@ -13,8 +13,7 @@
     padding: 20px;
     max-height: 550px;
     min-height: 550px;
-    
-    box-shadow: 1px 2px 10px #888888;
+    /*box-shadow: 1px 2px 10px #888888;*/
     background-color: #fff;
     margin-top: 20px;
 
@@ -51,6 +50,7 @@
     width: 90%;
     background-color: white;
     color: black;
+    margin-bottom: 5px;
 }
 
 .pic {
@@ -59,6 +59,7 @@
 
 .score {
     display: inline-block;
+    margin-top: 9px;
 }
 .checkAnswer {
     margin-top: 15px;
